[package]
name = "exec"
version = "0.1.2"
edition = "2021"

[dependencies]
lua_parser = { version = "0.5.0", path = "../parser", features = ["diag"] }
lua_semantics = { version = "0.3.0", path = "../semantics", features = [
  "diag",
] }
lua_ir = { version = "0.3.0", path = "../lua_ir" }
codespan-reporting = { version = "0.11" }

[features]
default = []
32bit = ["lua_parser/32bit"]
