[package]
name = "lua_ir"
version = "0.7.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "lua runtime and IR generation"
repository = "https://github.com/ehwan/lua_rust"
readme = "../README.md"
keywords = ["parser", "lua", "glr"]
categories = ["parsing"]

[dependencies]
lua_tokenizer = { version = "0.4.0", path = "../tokenizer" }
lua_semantics = { version = "0.8.0", path = "../semantics" }
lua_parser = { version = "0.9.0", path = "../parser" }
codespan-reporting = { version = "0.11", optional = true }
rand = "0.8"
indexmap = "2.6.0"

[features]
default = []
32bit = ["lua_tokenizer/32bit", "lua_semantics/32bit"]
diag = ["dep:codespan-reporting", "lua_tokenizer/diag", "lua_semantics/diag"]
