[package]
name = "lua_parser"
version = "0.1.0"
edition = "2021"

[dependencies]
rusty_lr = { version = "3.1.0", path = "../../RustyLR/rusty_lr", features = [
  "fxhash",
  "tree",
  "error",
] }
lua_tokenizer = { verion = "0.1.0", path = "../tokenizer" }
codespan-reporting = { version = "0.11", optional = true }

[features]
default = []
32bit = []
diag = ["dep:codespan-reporting", "lua_tokenizer/diag"]
