[package]
name = "lua_tokenizer"
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "tokenizer for lua language"
repository = "https://github.com/ehwan/lua_rust"
readme = "../README.md"
keywords = ["parser", "lua", "glr"]
categories = ["parsing"]

[dependencies]
codespan-reporting = { version = "0.11", optional = true }

[features]
default = []
32bit = []
diag = ["dep:codespan-reporting"]
